--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
     "source": "http://cgit.drupalcode.org/migrate_source_jsonpath"
   },
   "require": {
-    "galbar/jsonpath": "dev-master"
+    "galbar/jsonpath": "^1.0"
   }
 }
